[gd_scene load_steps=2 format=3 uid="uid://cet2t7cohoa86"]

[ext_resource type="Script" path="res://godot_launcher.gd" id="1_noahr"]

[node name="GodotLauncher" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_noahr")

[node name="ProjectDirectoryDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
size = Vector2i(452, 162)
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2

[node name="InstallDirectoryDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
size = Vector2i(452, 162)
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProjectContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConfigGridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 2

[node name="ProjectDirButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ConfigGridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Select Project Directory
"

[node name="ProjectDirLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ConfigGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "./projects"
clip_text = true
text_overrun_behavior = 3

[node name="InstallDirButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ConfigGridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Select Install Directory
"

[node name="InstallDirLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ConfigGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "./installs"
clip_text = true
text_overrun_behavior = 3
